<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <!-- Home (viaggio corrente) -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.travelcompanion.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_note"
            app:destination="@id/nav_note" />
    </fragment>

    <!-- Nuovo viaggio -->
    <fragment
        android:id="@+id/nav_new_trip"
        android:name="com.example.travelcompanion.ui.newtrip.NewTripFragment"
        android:label="@string/start_trip_title"
        tools:layout="@layout/fragment_new_trip">
        <action
            android:id="@+id/action_nav_new_trip_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <!-- Viaggi passati -->
    <fragment
        android:id="@+id/nav_my_trips"
        android:name="com.example.travelcompanion.ui.mytrips.MyTripsFragment"
        android:label="@string/menu_my_trips"
        tools:layout="@layout/fragment_my_trips" />

    <!-- Statistiche -->
    <fragment
        android:id="@+id/nav_stats"
        android:name="com.example.travelcompanion.ui.stats.StatsFragment"
        android:label="@string/menu_stats"
        tools:layout="@layout/fragment_stats" />

    <!-- Impostazioni -->
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.travelcompanion.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <!-- Nota -->
    <fragment
        android:id="@+id/nav_note"
        android:name="com.example.travelcompanion.ui.home.NoteFragment"
        android:label="Nota"
        tools:layout="@layout/fragment_note" />

    <!-- Nessun viaggio in corso -->
    <fragment
        android:id="@+id/noTripFragment"
        android:name="com.example.travelcompanion.ui.home.NoTripFragment"
        android:label="Home"
        tools:layout="@layout/fragment_no_trip">
        <action
            android:id="@+id/action_noTripFragment_to_nav_new_trip"
            app:destination="@id/nav_new_trip" />
    </fragment>

</navigation>
